--- a/action.yml
+++ b/action.yml
@@ -49,6 +49,10 @@ inputs:
       The id is used to terminate the EC2 instance when the runner is not needed anymore.
       This input is required if you use the 'stop' mode.
     required: false
+  iam-role-name:
+    description: >-
+      IAM Role Name to attach to the created runner.
+    required: false
 outputs:
   label:
     description: >-
