Support adding tags

--- a/action.yml
+++ b/action.yml
@@ -49,6 +49,13 @@ inputs:
       The id is used to terminate the EC2 instance when the runner is not needed anymore.
       This input is required if you use the 'stop' mode.
     required: false
+  aws-resource-tags:
+    description: >-
+      Tags to attach to the launched ec2 instance and volume.
+      This must be a stringified array of AWS Tag objects, with both Key and Value fields,
+      for example: '[{"Key": "TagKey1", "Value": "TagValue1"}, {"Key": "TagKey2", "Value": "TagValue2"}]'
+    required: false
+    default: '[]'
 outputs:
   label:
     description: >-
