Test supporting multiple runners

--- a/action.yml
+++ b/action.yml
@@ -65,6 +65,11 @@ inputs:
     description: >-
       Directory that contains actions-runner software and scripts. E.g. /home/runner/actions-runner.
     required: false
+  runner-count:
+    description: >-
+      Number of instances to create.
+    required: false
+    default: '1'
 outputs:
   label:
     description: >-
@@ -72,9 +77,9 @@ outputs:
       The label is used in two cases:
       - to use as the input of 'runs-on' property for the following jobs;
       - to remove the runner from GitHub when it is not needed anymore.
-  ec2-instance-id:
+  ec2-instance-ids:
     description: >-
-      EC2 Instance Id of the created runner.
+      EC2 Instance Id(s) of the created runner(s).
       The id is used to terminate the EC2 instance when the runner is not needed anymore.
 runs:
   using: node12
