--- a/action.yml
+++ b/action.yml
@@ -49,6 +49,7 @@ inputs:
       The Id(s) are used to terminate the EC2 instance(s) when the runner is not needed anymore.
       This input is required if you use the 'stop' mode.
     required: false
+    default: 'null'
   iam-role-name:
     description: >-
       IAM Role Name to attach to the created EC2 instance.
